changed look quite a bit, cleaner now

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="./src/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-K3j6h2A+Q7EcEIoDho4Wh9tUp0ZflQnRyAOVuP3ZkNQ7EXn3mE8zO5M3lqWrzyjILcXK4I06iBkGZ4Rj6gF7kA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roni Domi Portfolio</title>
   </head>
